# Pocket_Discord

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.txt  README.md  certgen.sh  gen_cert.sh  readme.md
include/: defaults.h  delayed_tasker.hpp  eventhandler.h  exception.h  filehandler.h  functionwrapper.h  heapstring.h  jsoninterface.h  led_control.hpp  ledhandler.h  memory_file.hpp  memory_json.hpp  pocket_discord.hpp  printer.hpp  sd_card.hpp  smartjsonalloc.h  tasker.hpp  useful.h
include/discord/: core.hpp  gateway.hpp  https.hpp
include/discord/gateway/: attachment.hpp  channel.hpp  embed.hpp  emoji.hpp  guild.hpp  interaction.hpp  member.hpp  message.hpp  presence.hpp  reaction.hpp  role.hpp  user.hpp
include/discord/raw/: gateway.hpp  http_interface.hpp  time_iso.hpp
src/: delayed_tasker.cpp  eventhandler.cpp  exception.cpp  filehandler.cpp  functionwrapper.cpp  heapstring.cpp  jsoninterface.cpp  led_control.cpp  ledhandler.cpp  memory_file.cpp  memory_json.cpp  printer.cpp  sd_card.cpp  smartjsonalloc.cpp  tasker.cpp  useful.cpp
src/discord/: core.cpp  gateway.cpp  https.cpp
src/discord/gateway/: attachment.cpp  channel.cpp  embed.cpp  emoji.cpp  guild.cpp  interaction.cpp  member.cpp  message.cpp  presence.cpp  reaction.cpp  role.cpp  user.cpp
src/discord/raw/: gateway.cpp  http_interface.cpp  time_iso.cpp
